# cred-proxy

./: .gitignore  CHANGELOG.md  Dockerfile  Justfile  LICENSE  README.md  access-rules.example.yaml  agent-claude-md.md  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/cache/artifact-index/: context.db
.github/workflows/: ci.yml  docs.yml  release.yml
access-rules.d/: github.example.yaml
agent-skill/: API-REFERENCE.md  SKILL.md
docs/: agent-integration.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  index.md
docs/api/: agent.md  management.md
scripts/: entrypoint.sh  generate-ca.sh
src/auth_injection_proxy/: __init__.py  addon.py  config.py  logging.py
src/auth_injection_proxy/access/: matcher.py  models.py  store.py
src/auth_injection_proxy/agent_api/: handlers.py
src/auth_injection_proxy/injection/: basic.py  bearer.py  external_script.py  header.py  oauth2.py  (+2 more)
tests/: conftest.py
tests/integration/: test_access_rules_api.py  test_access_rules_flow.py  test_access_rules_hot_reload.py  test_addon_flow.py  test_agent_api.py  test_hot_reload.py  test_mgmt_api.py  test_setup_flow.py
tests/unit/: test_access_matcher.py  test_access_models.py  test_access_store.py  test_config.py  test_injection_basic.py  test_injection_bearer.py  test_injection_external_script.py  test_injection_header.py  test_injection_oauth2.py  test_injection_query.py  test_logging.py  test_masking.py  test_matching.py  test_pending_requests.py  test_response_strip.py  test_store_interface.py  test_yaml_store.py
(+14 files in other folders)
